--- a/index.html
+++ b/index.html
@@ -33,28 +33,29 @@
         <div class="hovershadow" id="githubicon" onclick="location.href='https://github.com/support-jailbreak'">       
         </div>
 
+
         <div class="hovershadow" id="redditicon" onclick="location.href='https://reddit.com/user/bvnsupport'">       
         </div>
 
-        <div class="hovershadow" id="twittericon" onclick="location.href='https://mobile.twitter.com/BvnRepo/'">       
+        <div class="hovershadow" id="twittericon" onclick="location.href='https://mobile.twitter.com/RepoBvn'">       
         </div>
 
 </div>
    </div>
 
 <div class="headhov">
-    <div class="animated count pulse" id="header" onclick="location.href='https://support-jailbreak.github.io'">
+    <div class="animated count pulse" id="header" onclick="location.href='https://bvnsupport-jailbreak.github.io'">
 
     </div>
 </div>
 
     <div class="filter animated fadeInUp" id="repotitle">
-        REPO BIỆN VĂN NHẬT
+        BVN SUPPORT JAILBREAK
     </div>
 
     <div class="filter animated fadeInUp" id="repodesc">
         Kho lưu trữ github dành riêng để lưu trữ các chỉnh sửa bẻ khoá.
-        (Nếu thêm nguồn của tôi vào Cydia không có #Mô Tả & THÔNG TIN TWEAKS bạn hãy cài đặt trình quản lý gói Zebra sau đó thêm nguồn của Tôi vào Zebra sẽ hiển thị đầy đủ thông tin,tôi sẽ cố găng fix lỗi này sớm nhất có thể.Cảm ơn các bạn🥰)
+       
     </div>
 <br>
 <center>
@@ -62,7 +63,7 @@
 </center>
 <br>
     <div style="margin-left: 30px; margin-right: 30px" class="filter animated fadeInUp" id="clickto">
-Chọn một trình quản lý gói để thêm kho lưu trữ này vào nó:
+NHẤP VÀO BÊN DƯỚI ĐỂ THÊM NGUỒN VÀO TRÌNH QUẢN LÝ GÓI CỦA BẠN
     </div>
 
 <div style="margin-top: 60px; margin-bottom: 90px; class="animated fadeIn2">
@@ -71,7 +72,7 @@ Chọn một trình quản lý gói để thêm kho lưu trữ này vào nó:
 <div style="margin-top: 30px; margin-bottom: 25px; margin-left: 25px; margin-right: 40px" class="row zoom animated swirlcydia">
  <div class="cydiablur zoom">
   <div class="cydiablur-inside">
-    <img onclick="location.href='https://cydia.saurik.com/api/share#?source=https://support-jailbreak.github.io/';" src="./assets/cydiaicon.png" style="width: 125px; height: 125px" class="filter">
+    <img onclick="location.href='https://cydia.saurik.com/api/share#?source=https://support-jailbreak.github.io';" src="./assets/cydiaicon.png" style="width: 125px; height: 125px" class="filter">
   </div>
  </div>
 <div class="filter animated fadecydia" id="caption">Cydia</div>
@@ -80,7 +81,7 @@ Chọn một trình quản lý gói để thêm kho lưu trữ này vào nó:
 <div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
  <div class="sileoblur zoom">
   <div class="sileoblur-inside">
-    <img onclick="location.href='sileo://source/https://https://support-jailbreak.github.io/';" src="./assets/sileoicon.png" style="width: 125px; height: 125px" class="filter">
+    <img onclick="location.href='sileo://source/https://support-jailbreak.github.io';" src="./assets/sileoicon.png" style="width: 125px; height: 125px" class="filter">
   </div>
  </div>
 <div class="filter animated fadesileo" id="caption">Sileo</div>
@@ -89,7 +90,7 @@ Chọn một trình quản lý gói để thêm kho lưu trữ này vào nó:
 <div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlzebra">
  <div class="zebrablur zoom">
   <div class="zebrablur-inside">
-    <img onclick="location.href='zbra://sources/add/https://https://support-jailbreak.github.io/';" src="./assets/zebraicon.png" style="width: 125px; height: 125px" class="filter">
+    <img onclick="location.href='zbra://sources/add/https://support-jailbreak.github.io';" src="./assets/zebraicon.png" style="width: 125px; height: 125px" class="filter">
   </div>
  </div>
 <div class="filter animated fadezebra" id="caption">Zebra</div>
@@ -98,18 +99,313 @@ Chọn một trình quản lý gói để thêm kho lưu trữ này vào nó:
 <div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 25px" class="row zoom animated swirlinstaller">
  <div class="installerblur zoom">
   <div class="installerblur-inside">
-    <img onclick="location.href='installer://add/repo=https://https://support-jailbreak.github.io/';" src="./assets/installericon.png" style="width: 125px; height: 125px" class="filter">
+    <img onclick="location.href='installer://add/repo=https://support-jailbreak.github.io';" src="./assets/installericon.png" style="width: 125px; height: 125px" class="filter">
   </div>
  </div>
 <div class="filter animated fadeinstaller" id="caption">Installer</div>
+    
+</div>
+  </div>
+<br>
+<center>
+<img src="./assets/tag.png" style="width: 100px; height: 100px" class="filter animated fadeInUp">
+</center>
+<br>
+</center>
+
+    <div style="margin-left: 30px; margin-right: 30px" class="filter animated fadeInUp" id="clickto">
+Link Cài Trực Tiếp TrollStore iOS 14-15 
+    </div>
+
+<div style="margin-top: 60px; margin-bottom: 90px; class="animated fadeIn2">
+
+<center>
+<div style="margin-top: 30px; margin-bottom: 25px; margin-left: 25px; margin-right: 40px" class="row zoom animated swirlcydia">
+ <div class="trollstoreblur zoom">
+  <div class="trollstoreblur-inside">
+    <img onclick="location.href='https://is.gd/34306installer14';" src="./assets/trollstore.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadecydia" id="caption">TrollStore iOS 14</div>
+</div>
+
+<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
+ <div class="trollstore15blur zoom">
+  <div class="trollstore15blur-inside">
+    <img onclick="location.href='https://is.gd/34306troll';" src="./assets/trollstore15.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadesileo" id="caption">TrollStore iOS15</div>
+</div>
+
+<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
+ <div class="Filza15blur zoom">
+  <div class="Filzablur-inside">
+    <img onclick="location.href='https://drive.google.com/file/d/1ls020Y_g8vdjDotlBIi0K5awQueY6NnO/view?usp=drivesdk';" src="./assets/Filza.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadesileo" id="caption">FilzaCrack 14-15</div>
+</div>
+   </div>
+</div>
+
+<br>
+<br>
+<br>
+
+<center>
+
+</div>
+  </div>
+<br>
+<center>
+<img src="./assets/tag.png" style="width: 100px; height: 100px" class="filter animated fadeInUp">
+</center>
+<br>
+</center>
+
+    <div style="margin-left: 30px; margin-right: 30px" class="filter animated fadeInUp" id="clickto">
+BYPASS GOOGLE ACCOUNT 2022
+    </div>
+
+<div style="margin-top: 60px; margin-bottom: 90px; class="animated fadeIn2">
+
+<center>
+<div style="margin-top: 30px; margin-bottom: 25px; margin-left: 25px; margin-right: 40px" class="row zoom animated swirlcydia">
+ <div class="caidatblur zoom">
+  <div class="caidatblur-inside">
+    <img onclick="location.href='intent://com.android.settings/#Intent;scheme=android-app;end';" src="./assets/caidat.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadecydia" id="caption">Mở/Open Setting</div>
+</div>
+
+<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
+ <div class="Chromeblur zoom">
+  <div class="Chromeblur-inside">
+    <img onclick="location.href='intent://com.android.chrome/#Intent;scheme=android-app;end';" src="./assets/chorm.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadesileo" id="caption">Mở/Open Chrome</div>
+</div>
+
+<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
+ <div class="screenblur zoom">
+  <div class="screenblur-inside">
+    <img onclick="location.href='intent://com.google.android.gms/#Intent;scheme=promote_smartlock_scheme;end';" src="./assets/screenlock.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadesileo" id="caption">Screen Smartlock</div>
+</div>
+<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
+ <div class="galaxyblur zoom">
+  <div class="galaxyblur-inside">
+    <img onclick="location.href='intent://com.sec.android.app.samsungapps/#Intent;scheme=android-app;end';" src="./assets/galaxy.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadesileo" id="caption">Galaxy Store</div>
+</div>
+<br>
+<br>
+</center>
+
+
+<div style="margin-top: 60px; margin-bottom: 90px; class="animated fadeIn2">
+
+<center>
+<div style="margin-top: 30px; margin-bottom: 25px; margin-left: 25px; margin-right: 40px" class="row zoom animated swirlcydia">
+ <div class="myfileblur zoom">
+  <div class="myfileblur-inside">
+    <img onclick="location.href='intent://com.sec.android.app.myfiles/#Intent;scheme=android-app;end';" src="./assets/myfile.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadecydia" id="caption">Samsung MyFiles</div>
+</div>
+
+<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
+ <div class="hiddenblur zoom">
+  <div class="hiddenblur-inside">
+    <img onclick="location.href='https://galaxystore.samsung.com/detail/com.jami.tool.hiddensetting.other?hit_type=Desktop&source=GBadge_01_5395641_setting';" src="./assets/hiden.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadesileo" id="caption">Hidden Settings</div>
+</div>
+
+<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
+ <div class="Allianceblur zoom">
+  <div class="Allianceblur-inside">
+    <img onclick="location.href='intent://com.rrivenllc.shieldx/#Intent;scheme=android-app;end';" src="./assets/alliance.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadesileo" id="caption">Alliance Shield</div>
+</div>
+<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
+ <div class="launcherblur zoom">
+  <div class="launcherblur-inside">
+    <img onclick="location.href='intent://com.sec.android.app.launcher/#Intent;scheme=android-app;end';" src="./assets/launcher.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadesileo" id="caption">Home Launcher</div>
 </div>
 </center>
 
+
+<div style="margin-top: 60px; margin-bottom: 90px; class="animated fadeIn2">
+
+<center>
+<div style="margin-top: 30px; margin-bottom: 25px; margin-left: 25px; margin-right: 40px" class="row zoom animated swirlcydia">
+ <div class="myfileblur zoom">
+  <div class="myfileblur-inside">
+    <img onclick="location.href='intent://com.google.android.gsf.login.LoginActivity/#Intent;scheme=android-app;end';" src="./assets/login.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadecydia" id="caption">Login Account</div>
 </div>
 
+<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
+ <div class="hiddenblur zoom">
+  <div class="hiddenblur-inside">
+    <img onclick="location.href='intent://com.google.android.youtube/#Intent;scheme=android-app;end';" src="./assets/youtube1.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadesileo" id="caption">Mở/Open Youtube</div>
+</div>
+
+<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
+ <div class="samsungblur zoom">
+  <div class="samsungkblur-inside">
+    <img onclick="location.href='intent://com.android.settings/com.samsung.android.settings.biometrics.fingerprint.FingerprintEntry/#Intent;scheme=android-app;end';" src="./assets/id.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadesileo" id="caption">Samsung TouchID</div>
+</div>
+<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
+ <div class="samsungblur zoom">
+  <div class="samsungkblur-inside">
+    <img onclick="location.href='intent://com.samsung.android.dialer/#Intent;scheme=android-app;end';" src="./assets/smart.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadesileo" id="caption">Smart Switch</div>
+</div>
+</div>
+    <br>
+ <br>
+ <br>
 <br>
 <br>
+ <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Notification_Bar.apk">Notification_Bar.apk</a>
 <br>
+<br>
+ <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Package_Disabler_Pro.apk">Package_Disabler_Pro.apk</a>
+<br>
+<br>
+ <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Android_5_GAM.apk">Android_5_GAM.apk</a>
+<br>
+ <br> 
+<br>
+ <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Android_6_GAM.apk">Android_6_GAM.apk</a>
+<br> 
+<br>
+ <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Android_8-9-10_GAM.apk">Android_8-9-10_GAM.apk</a>
+<br> 
+<br> 
+ <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Google_Setting.apk">Google_Setting.apk</a>
+<br> 
+<br> 
+ <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/FRP_Bypass.apk">FRP_Bypass.apk</a>
+<br> 
+<br> 
+ <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/FRP_Android_7.apk">FRP_Android_7.apk</a>
+<br> 
+<br> 
+ <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/FRP_vnROM.apk">FRP_vnROM.apk</a>
+<br> 
+<br> 
+ <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Test_DPC.apk">Test_DPC.apk</a>
+<br> 
+<br> 
+ <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/QuickShortcutMaker.apk">QuickShortcutMaker.apk</a>
+<br> 
+<br> 
+ <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Apex_Launcher.apk">Apex_Launcher.apk</a>
+<br> 
+<br> 
+ <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Nova_Launcher.apk">Nova_Launcher.apk</a>
+<br>
+<br> 
+ <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Menu_Button.apk">Menu_Button.apk</a>
+<br> 
+<br> 
+ <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/ES_File_Explorer.apk">ES_File_Explorer.apk</a>
+<br> 
+<br> 
+ <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Setting.apk">Setting.apk</a>
+<br> 
+<br> 
+ <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Development_Settings.apk">Development_Settings.apk</a>
+<br> 
+<br> 
+ <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Phone_Clone.apk">Phone_Clone.apk</a>
+<br>
+<br> 
+ <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/HushSMS.apk">HushSMS.apk</a>
+<br> 
+<br> 
+ <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/File_Commander_Manager.apk">Commander_Manager.apk</a>
+<br> 
+<br> 
+ <a class="btn btn-xs btn-primary" href="https://github.com/vnrom/bypass/raw/master/Smart_Switch_Mobile.apk">Smart_Switch_Mobile.apk</a>
+<br> 
+<br> 
+<br>
+<center>
+
+</div>
+  </div>
+<br>
+<center>
+<img src="./assets/tag.png" style="width: 100px; height: 100px" class="filter animated fadeInUp">
+</center>
+<br>
+</center>
+
+    <div style="margin-left: 30px; margin-right: 30px" class="filter animated fadeInUp" id="clickto">
+SAM SUNG TOOL
+    </div>
+
+<div style="margin-top: 60px; margin-bottom: 90px; class="animated fadeIn2">
+
+<center>
+<div style="margin-top: 30px; margin-bottom: 25px; margin-left: 25px; margin-right: 40px" class="row zoom animated swirlcydia">
+ <div class="odinblur zoom">
+  <div class="odinblur-inside">
+    <img onclick="location.href='https://drive.google.com/file/d/1Y0idY57UVR8Ds52iTvMi3nhpzobDOagU/view?usp=drivesdk';" src="./assets/odin.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadecydia" id="caption">Odin3-V3.14.1</div>
+</div>
+
+<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
+ <div class="Samsungfrpblur zoom">
+  <div class="Samsungfrpblur-inside">
+    <img onclick="location.href='https://mega.nz/file/D1snjYpa#uy1Gk0gMpfoIqv_uACMgDXC3JC4g0LSMWHn44NAzkN8';" src="./assets/frpbypass.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadesileo" id="caption">Frp Bypass</div>
+</div>
+
+<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
+ <div class="SamFwFRPToolblur zoom">
+  <div class="SamFwFRPToolblur-inside">
+    <img onclick="location.href='https://androidfilehost.com/?fid=14871746926876835679';" src="./assets/samfw.gif" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadesileo" id="caption">SamFWFrp Tool</div>
+</div>
+</div>
+    <br>
+  <br>
+ <br>  
 
 <center>
 
@@ -148,6 +444,7 @@ Chọn một trình quản lý gói để thêm kho lưu trữ này vào nó:
               <a class="btn btn-xs btn-primary" href="https://routinehub.co/shortcut/10236/?fbclid=IwAR3zmEPihb0M_PguwbHobWSTnTlNR7Jer0F1zAvxvVK5D1fgVOpstSPhnNE">Phím Tắt Tải Video TikTok Không có Logo</a> 
               <a class="btn btn-xs btn-primary" href="https://drive.google.com/file/d/1Fjn0b6dZ8wIFebm6j1TiT10TJxFhrjUm/view?usp=drivesdk">Ứng dụng xem Phim Hdo Player</a>  
 		</div>
+<a class="btn btn-xs btn-primary" href="https://drive.google.com/file/d/1GrR9xnbW2Pdg7Y1PuocIr-2AVJ9JsK4c/view?usp=drivesdk"> IPA TrollStore V1.0.10</a>
 <br>
 <center>
 <img src="./assets/tag.png" style="width: 100px; height: 100px" class="filter animated fadeInUp">
@@ -155,7 +452,7 @@ Chọn một trình quản lý gói để thêm kho lưu trữ này vào nó:
 <br>
 
     <div style="margin-left: 30px; margin-right: 30px" class="filter animated fadeInUp" id="clickto">
-THEO DÕI TÔI TRÊN MẠNG XÃ HỘI:
+LIÊN HỆ CHO TÔI QUA
     </div>
 
 <div style="margin-top: 60px; margin-bottom: 90px; class="animated fadeIn2">
@@ -229,7 +526,7 @@ THEO DÕI TÔI TRÊN MẠNG XÃ HỘI:
 
 <div class="animated fadeInUp" id="bottomnavnar">
 <br>
-<div>Trang web được phát triển bởi BIỆN VĂN NHẬT ©  2020-2022</div>
+<div>Trang web được phát triển bởi BIỆN VĂN NHẬT ©2022</div>
 </div>
 
 </body>
