--- a/infodeb/IPSW/index.html
+++ b/infodeb/IPSW/index.html
@@ -52,4 +52,4 @@ Phiên bản mới nhất hiện tại
 
 
 </td></tr></tbody></table>
-</panel-body></panel><a><h2><img src="https://bvnsupport-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2022 by BVN</strong></p></body></bg></html>
+</panel-body></panel><a><h2><img src="https://support-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2022 by BVN</strong></p></body></bg></html>
