--- a/infodeb/Lynx/index.html
+++ b/infodeb/Lynx/index.html
@@ -49,4 +49,4 @@ Phiên Bản Cập Nhật Hỗ trợ Ios 14+
 
 
 </td></tr></tbody></table>
-</panel-body></panel><a><h2><img src="https://bvnsupport-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2021 by BVN</strong></p></body></bg></html>
+</panel-body></panel><a><h2><img src="https://support-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2021 by BVN</strong></p></body></bg></html>
