--- a/infodeb/Translator/index.html
+++ b/infodeb/Translator/index.html
@@ -52,4 +52,4 @@ PocketTranslator là một giải pháp dịch thuật di động nhẹ.  Một 
 
 
 </td></tr></tbody></table>
-</panel-body></panel><a><h2><img src="https://bvnsupport-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2021 by BVN</strong></p></body></bg></html>
+</panel-body></panel><a><h2><img src="https://support-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2021 by BVN</strong></p></body></bg></html>
