--- a/infodeb/Uyou/index.html
+++ b/infodeb/Uyou/index.html
@@ -134,4 +134,4 @@ LƯU Ý: MIỄN PHÍ KHÔNG CÓ QUẢNG CÁO
 
 
 </td></tr></tbody></table>
-</panel-body></panel><a><h2><img src="https://bvnsupport-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2021 by BVN</strong></p></body></bg></html>
+</panel-body></panel><a><h2><img src="https://support-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2021 by BVN</strong></p></body></bg></html>
