--- a/infodeb/April/index.html
+++ b/infodeb/April/index.html
@@ -23,7 +23,7 @@ Trải nghiệm trang cài đặt hoàn toàn mới
 <img src="Screenshots/3.jpg?size=medium"/></a></li>
 
 <li><a target="_blank" href="Screenshots/4.jpg?size=full">
-<img src="Screenshots/.jpg?size=medium"/></a></li>
+<img src="Screenshots/4.jpg?size=medium"/></a></li>
 
 
 
