--- a/infodeb/GesturesXV/index.html
+++ b/infodeb/GesturesXV/index.html
@@ -3,10 +3,8 @@
 
 Fake cử chỉ iPhone X trên các dòng máy đời cũ hỗ trợ iOS 15
 
-<br>
-<li>
 
-không có cấu hình tinh chỉnh trong cài đặt
+
 
 
 </span></li></lable><br>
@@ -22,32 +20,46 @@ không có cấu hình tinh chỉnh trong cài đặt
 <li><a target="_blank" href="Screenshots/2.jpg?size=full">
 <img src="Screenshots/2.jpg?size=medium"/></a></li>
 
+<li><a target="_blank" href="Screenshots/3.jpg?size=full">
+<img src="Screenshots/3.jpg?size=medium"/></a></li>
+
+
+<li><a target="_blank" href="Screenshots/4.jpg?size=full">
+<img src="Screenshots/4.jpg?size=medium"/></a></li>
+
+<li><a target="_blank" href="Screenshots/3.jpg?size=full">
+<img src="Screenshots/5.jpg?size=medium"/></a></li>
+
 
 
 </ul></panel-body></panel>
 <panel-header><label><panel style="margin-top: -14px;" class="modern changes-panel"><ttp class="name">Nội dung cập nhật</ttp></label></panel-header><panel-body style="margin-top: -10px;"><span class="change-content">
 
 <li>
-
-Phiên bản mới nhất hiện tại
-
+Sửa lỗi với các dòng máy Plus
+<br>
+<li>
+Thanh Home: Đã thêm Ẩn thanh Home
+<br>
+<li>
+Thêm Thanh Dock iPad & 5 Biểu tượng Dock
 </li>
 
 </panel-body></panel> <panel class="modern info-panel"><panel-header><ttp class="name">Thông tin</ttp></panel-header><panel-body class="pb-0"><table style="margin-top: -20px;" class="information mt-1" cols="2" border="0"><tbody>
 
 <tr><td>Phiên bản</td><td>
 
-1.0
+1.1
 
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
 
-23/11/2022
+26/11/2022
 
 </td></tr>
 <tr><td>Dung lượng gói</td><td>
 
-15 KB 
+2 MB
 
 </td></tr>
 <tr><td>Hỗ trợ phiên bản IOS</td><td>
