--- a/index.html
+++ b/index.html
@@ -14,12 +14,6 @@
 <body>
 
 
- </div>
- <object data="bvnsupport-jailbreak.github.io/noel/Jingle_Bells.mp3" width="0" height="0" __idm_frm__="3008"> 
-  <param name="filename" value="bvnsupport-jailbreak.github.io/noel/Jingle_Bells.mp3"> 
-  <param name="autostart" value="1"> 
-  <param name="playcount" value="false"> 
- </object>
 
    <div class="animated fadeInDown" id="topnavbar">
 <br>
@@ -44,13 +38,13 @@
    </div>
 
 <div class="headhov">
-    <div class="animated count pulse" id="header" onclick="location.href='https://bvnsupport-jailbreak.github.io'">
+    <div class="animated count pulse" id="header" onclick="location.href='https://support-jailbreak.github.io'">
 
     </div>
 </div>
 
     <div class="filter animated fadeInUp" id="repotitle">
-        BVN SUPPORT JAILBREAK
+               BVN SUPPORT JAILBREAK
     </div>
 
     <div class="filter animated fadeInUp" id="repodesc">
@@ -103,6 +97,31 @@ NHẤP VÀO BÊN DƯỚI ĐỂ THÊM NGUỒN VÀO TRÌNH QUẢN LÝ GÓI CỦA B
   </div>
  </div>
 <div class="filter animated fadeinstaller" id="caption">Installer</div>
+
+  </div>
+<br>
+<center>
+<img src="./assets/tag.png" style="width: 100px; height: 100px" class="filter animated fadeInUp">
+</center>
+<br>
+</center>
+
+    <div style="margin-left: 30px; margin-right: 30px" class="filter animated fadeInUp" id="clickto">
+KHO IPA MIỄN PHÍ
+    </div>
+
+<div style="margin-top: 60px; margin-bottom: 90px; class="animated fadeIn2">
+
+<center>
+<div style="margin-top: 30px; margin-bottom: 25px; margin-left: 25px; margin-right: 40px" class="row zoom animated swirlcydia">
+ <div class="trollstoreblur zoom">
+  <div class="trollstoreblur-inside">
+    <img onclick="location.href='https://support-jailbreak.github.io/KhoIPA';" src="./assets/ipa.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadecydia" id="caption">Hãy nhấp vào đây</div>
+</div>
+
     
 </div>
   </div>
