--- a/KhoIPA/index.html
+++ b/KhoIPA/index.html
@@ -64,7 +64,7 @@ NHẤP VÀO BÊN DƯỚI ĐỂ TẢI IPA
 <div style="margin-top: 30px; margin-bottom: 25px; margin-left: 25px; margin-right: 40px" class="row zoom animated swirlcydia">
  <div class="caidatblur zoom">
   <div class="caidatblur-inside">
-    <img onclick="location.href='https://drive.google.com/file/d/1cVBk19FLCH1FMdOlS5abm5BFHaGTIhzs/view?usp=drivesdk" src="./assets/youtube1.png" style="width: 125px; height: 125px" class="filter">
+    <img onclick="location.href='https://drive.google.com/file/d/1cVBk19FLCH1FMdOlS5abm5BFHaGTIhzs/view?usp=drivesdk'"src="./assets/youtube1.png" style="width: 125px; height: 125px" class="filter">
   </div>
  </div>
 <div class="filter animated fadecydia" id="caption">uYou Plus</div>
@@ -73,7 +73,7 @@ NHẤP VÀO BÊN DƯỚI ĐỂ TẢI IPA
 <div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
  <div class="Chromeblur zoom">
   <div class="Chromeblur-inside">
-    <img onclick="location.href='https://drive.google.com/file/d/13ok8Mx5e77uwR2xk5_P2xUgDNeBnsRMc/view?usp=drivesdk" src="./assets/messenger.png" style="width: 125px; height: 125px" class="filter">
+    <img onclick="location.href='https://drive.google.com/file/d/13ok8Mx5e77uwR2xk5_P2xUgDNeBnsRMc/view?usp=drivesdk' "src="./assets/messenger.png" style="width: 125px; height: 125px" class="filter">
   </div>
  </div>
 <div class="filter animated fadesileo" id="caption">Mesenger Shark</div>
@@ -82,7 +82,7 @@ NHẤP VÀO BÊN DƯỚI ĐỂ TẢI IPA
 <div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
  <div class="screenblur zoom">
   <div class="screenblur-inside">
-    <img onclick="location.href='https://drive.google.com/file/d/1rpjNMzA2T72sDLm1cGMfy7R7ATSvRWrc/view?usp=drivesdk" src="./assets/facebook.png" style="width: 125px; height: 125px" class="filter">
+    <img onclick="location.href='https://drive.google.com/file/d/1rpjNMzA2T72sDLm1cGMfy7R7ATSvRWrc/view?usp=drivesdk' "src="./assets/facebook.png" style="width: 125px; height: 125px" class="filter">
   </div>
  </div>
 <div class="filter animated fadesileo" id="caption">Facebook Wolf</div>
@@ -90,7 +90,7 @@ NHẤP VÀO BÊN DƯỚI ĐỂ TẢI IPA
 <div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
  <div class="galaxyblur zoom">
   <div class="galaxyblur-inside">
-    <img onclick="location.href='https://drive.google.com/file/d/120kLviJFi8ia3KRbAihN0K8aCd39aYvA/view?usp=drivesdk" src="./assets/Picsart.png" style="width: 125px; height: 125px" class="filter">
+    <img onclick="location.href='https://drive.google.com/file/d/120kLviJFi8ia3KRbAihN0K8aCd39aYvA/view?usp=drivesdk' "src="./assets/Picsart.png" style="width: 125px; height: 125px" class="filter">
   </div>
  </div>
 <div class="filter animated fadesileo" id="caption">Picsart Premium</div>
@@ -106,7 +106,7 @@ NHẤP VÀO BÊN DƯỚI ĐỂ TẢI IPA
 <div style="margin-top: 30px; margin-bottom: 25px; margin-left: 25px; margin-right: 40px" class="row zoom animated swirlcydia">
  <div class="myfileblur zoom">
   <div class="myfileblur-inside">
-    <img onclick="location.href='https://drive.google.com/file/d/1yRz3wFWZ3lm5yYBj0BfzxjFCP_CgdvVr/view?usp=drivesdk;" src="./assets/viva.png" style="width: 125px; height: 125px" class="filter">
+    <img onclick="location.href='https://drive.google.com/file/d/1yRz3wFWZ3lm5yYBj0BfzxjFCP_CgdvVr/view?usp=drivesdk' "src="./assets/viva.png" style="width: 125px; height: 125px" class="filter">
   </div>
  </div>
 <div class="filter animated fadecydia" id="caption">VivaVideo premium</div>
@@ -115,7 +115,7 @@ NHẤP VÀO BÊN DƯỚI ĐỂ TẢI IPA
 <div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
  <div class="hiddenblur zoom">
   <div class="hiddenblur-inside">
-    <img onclick="location.href='https://drive.google.com/file/d/1pVWUPh9p32y6mqO3j8mKPCczL43DfL1y/view?usp=drivesdk" src="./assets/tiktok.png" style="width: 125px; height: 125px" class="filter">
+    <img onclick="location.href='https://drive.google.com/file/d/1pVWUPh9p32y6mqO3j8mKPCczL43DfL1y/view?usp=drivesdk' "src="./assets/tiktok.png" style="width: 125px; height: 125px" class="filter">
   </div>
  </div>
 <div class="filter animated fadesileo" id="caption">Tiktok LDR</div>
@@ -124,7 +124,7 @@ NHẤP VÀO BÊN DƯỚI ĐỂ TẢI IPA
 <div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
  <div class="Allianceblur zoom">
   <div class="Allianceblur-inside">
-    <img onclick="location.href='https://drive.google.com/file/d/18D073we2ggt2zB_XdKaJE_QDDLa1M61c/view?usp=drivesdk" src="./assets/locsim.png" style="width: 125px; height: 125px" class="filter">
+    <img onclick="location.href='https://drive.google.com/file/d/18D073we2ggt2zB_XdKaJE_QDDLa1M61c/view?usp=drivesdk' "src="./assets/locsim.png" style="width: 125px; height: 125px" class="filter">
   </div>
  </div>
 <div class="filter animated fadesileo" id="caption">LocSim  TS</div>
@@ -132,7 +132,7 @@ NHẤP VÀO BÊN DƯỚI ĐỂ TẢI IPA
 <div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
  <div class="launcherblur zoom">
   <div class="launcherblur-inside">
-    <img onclick="location.href='https://drive.google.com/file/d/1tSEjbUhdcLxF_8d-kPGcuzvAmmeHuz6_/view?usp=drivesdk" src="./assets/hot.png" style="width: 125px; height: 125px" class="filter">
+    <img onclick="location.href='https://drive.google.com/file/d/1tSEjbUhdcLxF_8d-kPGcuzvAmmeHuz6_/view?usp=drivesdk' "src="./assets/hot.png" style="width: 125px; height: 125px" class="filter">
   </div>
  </div>
 <div class="filter animated fadesileo" id="caption">Hotspot  TS</div>
@@ -146,7 +146,7 @@ NHẤP VÀO BÊN DƯỚI ĐỂ TẢI IPA
 <div style="margin-top: 30px; margin-bottom: 25px; margin-left: 25px; margin-right: 40px" class="row zoom animated swirlcydia">
  <div class="myfileblur zoom">
   <div class="myfileblur-inside">
-    <img onclick="location.href='https://drive.google.com/file/d/1A_3XwMmdDD4RswevBEKaytSscmJdufDW/view?usp=drivesdk" src="./assets/ad.png" style="width: 125px; height: 125px" class="filter">
+    <img onclick="location.href='https://drive.google.com/file/d/1A_3XwMmdDD4RswevBEKaytSscmJdufDW/view?usp=drivesdk' "src="./assets/ad.png" style="width: 125px; height: 125px" class="filter">
   </div>
  </div>
 <div class="filter animated fadecydia" id="caption">AdGuard Pro</div>
@@ -155,7 +155,7 @@ NHẤP VÀO BÊN DƯỚI ĐỂ TẢI IPA
 <div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
  <div class="hiddenblur zoom">
   <div class="hiddenblur-inside">
-    <img onclick="location.href='https://drive.google.com/file/d/18eGgU-FWXqCqkyxfBCm8smVJso9aR5_4/view?usp=drivesdk" src="./assets/cpu.png" style="width: 125px; height: 125px" class="filter">
+    <img onclick="location.href='https://drive.google.com/file/d/18eGgU-FWXqCqkyxfBCm8smVJso9aR5_4/view?usp=drivesdk' "src="./assets/cpu.png" style="width: 125px; height: 125px" class="filter">
   </div>
  </div>
 <div class="filter animated fadesileo" id="caption">CPU-X PRO</div>
@@ -164,7 +164,7 @@ NHẤP VÀO BÊN DƯỚI ĐỂ TẢI IPA
 <div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
  <div class="samsungblur zoom">
   <div class="samsungkblur-inside">
-    <img onclick="location.href='https://drive.google.com/file/d/1FX5NuSkddXG3cZxflXuLa6O92mtIWfQf/view?usp=drivesdk" src="./assets/spo.png" style="width: 125px; height: 125px" class="filter">
+    <img onclick="location.href='https://drive.google.com/file/d/1FX5NuSkddXG3cZxflXuLa6O92mtIWfQf/view?usp=drivesdk' "src="./assets/spo.png" style="width: 125px; height: 125px" class="filter">
   </div>
  </div>
 <div class="filter animated fadesileo" id="caption">Spotyfi 8.6.42</div>
@@ -172,7 +172,7 @@ NHẤP VÀO BÊN DƯỚI ĐỂ TẢI IPA
 <div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
  <div class="samsungblur zoom">
   <div class="samsungkblur-inside">
-    <img onclick="location.href='https://drive.google.com/file/d/1MM7JlKEzvekOPA7N7ijr0Ot-pDx5xLMC/view?usp=drivesdk" src="./assets/wf.png" style="width: 125px; height: 125px" class="filter">
+    <img onclick="location.href='https://drive.google.com/file/d/1MM7JlKEzvekOPA7N7ijr0Ot-pDx5xLMC/view?usp=drivesdk' "src="./assets/wf.png" style="width: 125px; height: 125px" class="filter">
   </div>
  </div>
 <div class="filter animated fadesileo" id="caption">WiFIList  TS</div>
@@ -210,7 +210,7 @@ NHẤP VÀO BÊN DƯỚI ĐỂ TẢI IPA
 <div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
  <div class="Filza15blur zoom">
   <div class="Filzablur-inside">
-    <img onclick="location.href='https://drive.google.com/file/d/1Z_PcCqd5vyOKGA05rwDb_5HL4_FPVRBF/view?usp=drivesdk" src="./assets/tele.png" style="width: 125px; height: 125px" class="filter">
+    <img onclick="location.href='https://drive.google.com/file/d/1Z_PcCqd5vyOKGA05rwDb_5HL4_FPVRBF/view?usp=drivesdk' "src="./assets/tele.png" style="width: 125px; height: 125px" class="filter">
   </div>
  </div>
 <div class="filter animated fadesileo" id="caption">Telegram New</div>
