--- a/KhoIPA/index.html
+++ b/KhoIPA/index.html
@@ -215,8 +215,44 @@ NHẤP VÀO BÊN DƯỚI ĐỂ TẢI IPA
  </div>
 <div class="filter animated fadesileo" id="caption">Telegram New</div>
 </div>
+<div style="margin-top: 60px; margin-bottom: 90px; class="animated fadeIn2">
+
+<center>
+<div style="margin-top: 30px; margin-bottom: 25px; margin-left: 25px; margin-right: 40px" class="row zoom animated swirlcydia">
+ <div class="trollstoreblur zoom">
+  <div class="trollstoreblur-inside">
+    <img onclick="location.href='https://drive.google.com/file/d/1K9857J4u90NuIOjeWJlC3RHsycE6QNhj/view?usp=drivesdk' " src="./assets/app.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadecydia" id="caption">AppStore++ V1.0.2</div>
+</div>
+
+<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
+ <div class="trollstore15blur zoom">
+  <div class="trollstore15blur-inside">
+    <img onclick="location.href='https://drive.google.com/file/d/1dn_bCBexvGMKjA-lj80PXq6rk592vCgW/view?usp=drivesdk' " src="./assets/sha.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadesileo" id="caption">Shadow rocket</div>
+</div>
+
+<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
+ <div class="Filza15blur zoom">
+  <div class="Filzablur-inside">
+    <img onclick="location.href='https://drive.google.com/file/d/1xB0OTBcGBXX2dOCri40ZPUbSjarNqvpR/view?usp=drivesdk' " src="./assets/apps.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadesileo" id="caption">Apps Manager</div>
+</div>
+<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
+ <div class="Filza15blur zoom">
+  <div class="Filzablur-inside">
+    <img onclick="location.href='https://drive.google.com/file/d/1sppFBtYh9qAaS0ii4dt8KmQjx7wvlIMc/view?usp=drivesdk' " src="./assets/cam.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadesileo" id="caption">Pro Cam</div>
+</div>
    </div>
-    <br>
  <br>
  <br>
 
