--- a/KhoIPA/index.html
+++ b/KhoIPA/index.html
@@ -252,6 +252,45 @@ NHẤP VÀO BÊN DƯỚI ĐỂ TẢI IPA
  </div>
 <div class="filter animated fadesileo" id="caption">Pro Cam</div>
 </div>
+</div>
+<div style="margin-top: 60px; margin-bottom: 90px; class="animated fadeIn2">
+
+<center>
+<div style="margin-top: 30px; margin-bottom: 25px; margin-left: 25px; margin-right: 40px" class="row zoom animated swirlcydia">
+ <div class="trollstoreblur zoom">
+  <div class="trollstoreblur-inside">
+    <img onclick="location.href='https://drive.google.com/file/d/10HZsXRVeEnGSOGd07p7gxEwl6tb2fs28/view?usp=drivesdk' " src="./assets/sub.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadecydia" id="caption">Subway Surf</div>
+</div>
+
+<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
+ <div class="trollstore15blur zoom">
+  <div class="trollstore15blur-inside">
+    <img onclick="location.href='https://drive.google.com/file/d/1XXfUk9kFlwSpBRLRWam9EQv0qe04Gyka/view?usp=drivesdk' " src="./assets/hdo.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadesileo" id="caption">HDO PLAY</div>
+</div>
+
+<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
+ <div class="Filza15blur zoom">
+  <div class="Filzablur-inside">
+    <img onclick="location.href='https://drive.google.com/file/d/1qi9ldwQ_Mri9Lo0NbOK9KvAjGvOJemiT/view?usp=drivesdk' " src="./assets/in.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadesileo" id="caption">Instagram NoAds</div>
+</div>
+<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
+ <div class="Filza15blur zoom">
+  <div class="Filzablur-inside">
+    <img onclick="location.href='https://drive.google.com/file/d/1WDPHVHtXBBWYt24z1J9gjavoRfFl3O2B/view?usp=drivesdk' " src="./assets/bat.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadesileo" id="caption">Battery Info</div>
+</div>
+   </div>
    </div>
  <br>
  <br>
