--- a/KhoIPA/index.html
+++ b/KhoIPA/index.html
@@ -290,6 +290,45 @@ NHẤP VÀO BÊN DƯỚI ĐỂ TẢI IPA
  </div>
 <div class="filter animated fadesileo" id="caption">Battery Info</div>
 </div>
+<div style="margin-top: 60px; margin-bottom: 90px; class="animated fadeIn2">
+
+<center>
+<div style="margin-top: 30px; margin-bottom: 25px; margin-left: 25px; margin-right: 40px" class="row zoom animated swirlcydia">
+ <div class="trollstoreblur zoom">
+  <div class="trollstoreblur-inside">
+    <img onclick="location.href='https://drive.google.com/file/d/1Rv11fWpWFf8tXkkL1UckPlXVVzww0-Bf/view?usp=drivesdk' " src="./assets/ki.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadecydia" id="caption">KineMaster 6.0.3</div>
+</div>
+
+<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
+ <div class="trollstore15blur zoom">
+  <div class="trollstore15blur-inside">
+    <img onclick="location.href='https://drive.google.com/file/d/19YC1h9_nRQAct7gWq7u-oJxKL1YA10_P/view?usp=drivesdk' " src="./assets/sceen.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadesileo" id="caption">Screen shotX</div>
+</div>
+
+<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
+ <div class="Filza15blur zoom">
+  <div class="Filzablur-inside">
+    <img onclick="location.href='https://drive.google.com/file/d/12j50vdIaP7TEQrj54qkZRbpBqc7o5ZUg/view?usp=drivesdk' " src="./assets/ulike.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadesileo" id="caption">Ulike - RCS</div>
+</div>
+<div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
+ <div class="Filza15blur zoom">
+  <div class="Filzablur-inside">
+    <img onclick="location.href='https://drive.google.com/file/d/12jBbS6EVmIwa43i7obfrPFnBDL7mlo4a/view?usp=drivesdk' " src="./assets/xi.png" style="width: 125px; height: 125px" class="filter">
+  </div>
+ </div>
+<div class="filter animated fadesileo" id="caption">XinaA12 Jailbreak</div>
+</div>
+   </div>
+   </div>
    </div>
    </div>
  <br>
