--- a/infodeb/AudioRecorder/index.html
+++ b/infodeb/AudioRecorder/index.html
@@ -97,12 +97,12 @@ Hỗ trợ thêm Tiếng Việt
 
 <tr><td>Phiên bản</td><td>
 
-4.0-3
+5.0-3
 
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
 
-1/08/2022
+18/12/2022
 
 </td></tr>
 <tr><td>Dung lượng gói</td><td>
@@ -112,10 +112,10 @@ Hỗ trợ thêm Tiếng Việt
 </td></tr>
 <tr><td>Hỗ trợ phiên bản IOS</td><td>
 
-12.0 - 14.8.1
+12.0 - 16
 
 
 
 
 </td></tr></tbody></table>
-</panel-body></panel><a><h2><img src="https://bvnsupport-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2022 by BVN</strong></p></body></bg></html>
+</panel-body></panel><a><h2><img src="https://support-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2022 by BVN</strong></p></body></bg></html>
