--- a/KhoIPA/index.html
+++ b/KhoIPA/index.html
@@ -322,10 +322,10 @@ NHẤP VÀO BÊN DƯỚI ĐỂ TẢI IPA
 <div style="margin-top: 25px; margin-bottom: 25px; margin-left: 40px; margin-right: 40px" class="row zoom animated swirlsileo">
  <div class="Filza15blur zoom">
   <div class="Filzablur-inside">
-    <img onclick="location.href='https://drive.google.com/file/d/1GZG7aN3cqU1S4grrjhUKs7BicEFLJfju/view?usp=drivesdk' " src="./assets/xi.png" style="width: 125px; height: 125px" class="filter">
+    <img onclick="location.href='https://www.dropbox.com/s/4sl5j5egqodwb0w/XinaA12.1.1.5.ipa?dl=0' " src="./assets/xi.png" style="width: 125px; height: 125px" class="filter">
   </div>
  </div>
-<div class="filter animated fadesileo" id="caption">XinaA12 Jailbreak</div>
+<div class="filter animated fadesileo" id="caption">XinaA15 Jailbreak</div>
 </div> 
     </div>
    </div>
