--- a/infodeb/Appsync/index.html
+++ b/infodeb/Appsync/index.html
@@ -38,12 +38,12 @@ Phiên Bản Mới Nhất Hiện Tại.
 
 <tr><td>Phiên bản</td><td>
 
-102.0
+160.0
 
 </td></tr>
 <tr><td>Ngày tải lên</td><td>
 
-19-09-2021
+20/12/2022
 
 </td></tr>
 <tr><td>Dung lượng gói</td><td>
@@ -53,9 +53,9 @@ Phiên Bản Mới Nhất Hiện Tại.
 </td></tr>
 <tr><td>Hỗ trợ phiên bản IOS</td><td>
 
-5.0 - 14.8
+5.0 - 16.2
 
 
 
 </td></tr></tbody></table>
-</panel-body></panel><a><h2><img src="https://bvnsupport-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2021 by BVN</strong></p></body></bg></html>
+</panel-body></panel><a><h2><img src="https://support-jailbreak.github.io/infodeb/Bvn/bvnavatar.png?size=small"/></h2></a><p><strong>Copyright © 2022 by BVN</strong></p></body></bg></html>
